<resources>
    <string name="app_name">Http-Requests</string>
    <string name="back">BACK...</string>
    <string name="latest_edit_date">Latest Edit Date:</string>
    <string name="latest_activity_date">Latest Activity Date:</string>
    <string name="question_id">Question ID:</string>
    <string name="answer_id">Answer ID:</string>
    <string name="score">Score:</string>
    <string name="data">Data of </string>
</resources>
